# meyl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: coverage.yaml  coverage.yml  release.yaml
examples/dst-generate_all_templates/wedding-invitation/: body.html  body_text.html  subject.html
examples/src/: base.html  style.css
examples/src-simple/new-article/: subject.html
examples/src-simple/newsletter/: subject.html
examples/src/payroll/: body.html  config.toml  subject.html
examples/src/wedding-invitation/: body.html  body_text.html  config.toml  subject.html
examples/src_simple/: config.toml
examples/src_simple/config_full_featured/: config.toml
examples/src_simple/config_no_context_data/: config.toml
examples/src_simple/new_article/: body.html
examples/src_simple/newsletter/: body.html  body_text.html  config.toml
src/: config.rs  constants.rs  lib.rs  main.rs  template.rs  template_functions.rs
tests/: cli.rs  helpers.rs  meyl_tests.rs  seg_tests.rs  template.rs  test_cli.rs  test_config.rs  test_template.rs  test_template_functions.rs
