[package]
name = "seg"
version = "0.1.0"
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
edition = "2018"

[dependencies]
html2text = "0.1.11"
inline_assets = "0.4.1"
minifier = { version = "0.0.36", features = ["html"] }
structopt = "0.3.14"
tera = "1.2.0"

# [dev-dependencies]
# cargo-tarpaulin = "0.12.4"  # it doesn't support windows.
